fixed overflow and tab media queries

--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,20 @@
     black:#000000;
     grey:#ebebeb;
  */
+
+
+ html,body{
+    height: 100%;
+    width: 100%;
+    overflow-x: hidden;
+    font-family: 'Segoe UI', Tahoma,  Verdana, sans-serif;
+    color: #505962;
+ }
 .wrap{
      /* makes sure all the content stays in the browser window */
     overflow-x: hidden;
     overflow-y: hidden;
-    font-family: 'Segoe UI', Tahoma,  Verdana, sans-serif;
-    color: #505962;
+    
 }
 
 
@@ -135,7 +143,7 @@
     background-repeat: no-repeat;
     position: relative;
     background-attachment: fixed;  
-    height: 600px;
+    height: 900px;
     color: white;
     position: relative;
     padding-top: 50px;
@@ -236,8 +244,106 @@
 
 
 /*-------------------MEDIA QUERIES----------------*/
-@media only screen and (max-width: 768px){
 
+/*---------------TABLET MAX-WIDTH 768px-------------------*/
+@media only screen and (max-width: 768px){
+    .navbar{
+        font-size: small;
+    }
+
+    /* ---------slider-----------*/
+    /* for the image slider */
+    .carousel-item{
+        height:60vh;
+          }
+     
+        .carousel-caption{
+            position: absolute;
+            font-weight:bold;
+            top:80px;
+        }
+     
+        .carousel-caption h1{
+            font-size: medium;
+        }
+     
+        .carousel-caption h3{
+            font-size: medium;
+        }
+     
+        .carousel-caption a {
+            font-size: medium;
+        }
+
+    /*------- About Us Section--------*/
+    #about{
+        height: 850px;
+        color: white;
+        position: relative;
+        padding-top: 25px;
+        
+      }
+    
+    #about h3{
+       font-size: medium;
+       }
+
+    /*------------contacts section-----------*/
+    #contacts{
+        font-size: medium;
+        height: 400px;
+    }
+ 
+    #contacts h2{
+        font-size: 30px;
+    }
+    #contacts .row{
+        margin: 0px;
+    }
+
+     #contacts .mb-4 .row .col-md-9 #contact-form .col-md-6 .md-form #name{
+        margin-top: 20px;
+        margin-left: 70px;
+     }
+    
+     #contacts .mb-4 .row .col-md-9 #contact-form .col-md-6 .md-form #email{
+        margin-top: 20px;
+        margin-left: 70px;
+    }
+    
+    #contacts .mb-4 .row .col-md-9 #contact-form .col-md-12 .md-form #subject{
+        margin-top: 20px;
+        margin-left: 70px;
+    }
+    
+     #contacts .col-md-9 .row .col-md-12 .md-form #message{
+        margin-top: 20px;
+        margin-left: 70px;
+     }
+    
+    #contacts .col-md-9 .row .col-md-12 .btn-primary{
+        margin-top: 20px;
+        margin-left: 70px;
+        width: 470px;
+    }
+
+    /*--------------footer-----------------*/
+    .container{
+    font-size: medium;
+    }
+
+    /*--------------copyright-----------------*/
+    .footer-copyright{
+    font-size: medium;
+}
+ 
+ 
+
+}
+ 
+
+/* ---------PHONE MAX-WIDTH 480px------------ */
+@media only screen and (max-width: 480px){
     .navbar{
         font-size: small;
     }
@@ -290,41 +396,49 @@
         font-size: 25px;
     }
     #contacts .row{
-        margin: 0px 10px 0px 10px;
+        margin: 0px 0px 0px 0px;
+        
     }
 
      #contacts .mb-4 .row .col-md-9 #contact-form .col-md-6 .md-form #name{
         margin-top: 20px;
+        margin-left: 0px;
+
      }
     
      #contacts .mb-4 .row .col-md-9 #contact-form .col-md-6 .md-form #email{
         margin-top: 20px;
+        margin-left: 0px;
+
     }
     
     #contacts .mb-4 .row .col-md-9 #contact-form .col-md-12 .md-form #subject{
         margin-top: 20px;
+        margin-left: 0px;
+
     }
     
      #contacts .col-md-9 .row .col-md-12 .md-form #message{
         margin-top: 20px;
+        margin-left: 0px;
+
      }
     
     #contacts .col-md-9 .row .col-md-12 .btn-primary{
         margin-top: 20px;
-        width: 250px;
+        width: 100px;
+        margin-left: 0px;
+
     }
  }
  
- /*--------------footer-----------------*/
-    .container{
-        font-size: small;
+/*--------------footer-----------------*/
+.container{
+    font-size: small;
     }
 
 /*--------------copyright-----------------*/
 .footer-copyright{
     font-size: small;
 }
- @media only screen and (max-width: 480px){
- 
- }
  
